<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:translationZ="1dp"
                android:layout_marginTop="28dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"/>

            <View
                android:id="@+id/vBackground"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:background="@color/xamarin_secondary" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="105dp"
                        android:scaleType="fitStart"
                        tools:src="@drawable/spring_java" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="-400dp"
                    android:layout_marginTop="210dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingEnd="12dp">


                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:background="@color/react"
                        tools:text="Spring Framework" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_desc"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_reguler"
                                    android:text="@string/developers"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_bold"
                                    android:text="@string/colon"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:id="@+id/tvDevelopers"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/nunito_reguler"
                                    android:textColor="@color/white"
                                    tools:text="Google" />

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_reguler"
                                    android:text="@string/release_date"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_bold"
                                    android:text="@string/colon"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:id="@+id/tvReleaseDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/nunito_reguler"
                                    android:textColor="@color/white"
                                    tools:text="2 April 2012" />

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_reguler"
                                    android:text="@string/programming_language"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_bold"
                                    android:text="@string/colon"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:id="@+id/tvProgrammingLanguage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/nunito_reguler"
                                    android:textColor="@color/white"
                                    tools:text="Kotlin" />

                            </TableRow>

                        </TableLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linearLayout"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/detail"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_reguler"
                    tools:text="@string/desc" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>